chore: fixed wrong margin on sidebar links

--- a/apps/client/src/styles.less
+++ b/apps/client/src/styles.less
@@ -13,6 +13,13 @@ h1, h2, h3, h4, h5 {
   width: 16px;
 }
 
+.ant-menu-vertical .ant-menu-item, .ant-menu-vertical-left .ant-menu-item, .ant-menu-vertical-right .ant-menu-item,
+.ant-menu-inline .ant-menu-item, .ant-menu-vertical .ant-menu-submenu-title,
+.ant-menu-vertical-left .ant-menu-submenu-title, .ant-menu-vertical-right .ant-menu-submenu-title,
+.ant-menu-inline .ant-menu-submenu-title {
+  margin-top: 0 !important;
+}
+
 .patreon-widget {
   > img {
     width: 175px;
